--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Alura</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/home.css" />
   </head>
   <body>
     <header>
       <h1 class="titulo-principal">Barbearia Alura</h1>
     </header>
 
-    <img id="banner" src="banner.jpg" alt="" />
+    <img id="banner" src="./img/banner.jpg" alt="" />
 
     <div class="principal">
       <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -47,7 +49,7 @@
         <li class="itens">Profissionais Qualificados</li>
       </ul>
 
-      <img src="./beneficios.jpg" alt="" class="imagembeneficios" />
+      <img src="./img/beneficios.jpg" alt="" class="imagembeneficios" />
     </div>
   </body>
 </html>
