--- a/produtos.html
+++ b/produtos.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produtos | Barberia Alura</title>
 
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./produtos.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/produtos.css" />
   </head>
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="./logo.png" alt="" /></h1>
+        <h1><img src="./img/logo.png" alt="" /></h1>
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -27,7 +28,7 @@
       <ul class="produtos">
         <li>
           <h2>Cabelo</h2>
-          <img src="./cabelo.jpg" alt="" />
+          <img src="./img/cabelo.jpg" alt="" />
           <p class="produto-descricao">
             Na tesoura ou máquna, como o cliente preferir
           </p>
@@ -35,13 +36,13 @@
         </li>
         <li>
           <h2>Barba</h2>
-          <img src="./barba.jpg" alt="" />
+          <img src="./img/barba.jpg" alt="" />
           <p class="produto-descricao">Corte e desenho profissional de barba</p>
           <p class="produto-preco">R$ 18,00</p>
         </li>
         <li>
           <h2>Cabelo + barba</h2>
-          <img src="./cabelo+barba.jpg" alt="" />
+          <img src="./img/cabelo+barba.jpg" alt="" />
           <p class="produto-descricao">Pacote completo de cabelo e barba</p>
           <p class="produto-preco">R$ 35,00</p>
         </li>
@@ -49,7 +50,7 @@
     </main>
 
     <footer>
-      <img src="./logo-branco.png" alt="" />
+      <img src="./img/logo-branco.png" alt="" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
     </footer>
   </body>
