--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="./img/logo.png" alt="" /></h1>
+        <h1><img src="./img/logo.png" alt="Logo da Barbearia Alura" /></h1>
         <nav>
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-      <img src="./img/logo-branco.png" alt="" />
+      <img src="./img/logo-branco.png" alt="Logo da Barbearia Alura" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
     </footer>
   </body>
